fix: attempt to install mpi3.3 on xenial
parallel mpi build

fix: wrong install path

pthread flag on xenial

fix: update comment in gcc dockerfile

--- a/scripts/uberenv/spack_configs/docker/ubuntu16/compilers.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/compilers.yaml
@@ -2,7 +2,9 @@ compilers:
   - compiler:
       environment: {}
       extra_rpaths: []
-      flags: {}
+      flags:
+        cflags: -pthread
+        cxxflags: -pthread
       modules: []
       operating_system: ubuntu16.04
       paths:
