parallel mpi build

--- a/scripts/docker/dockerfile_gcc-8
+++ b/scripts/docker/dockerfile_gcc-8
@@ -15,7 +15,7 @@ RUN sudo sh cmake-3.10.1-Linux-x86_64.sh --prefix=/usr --exclude-subdir
 
 # Avoid building MPICH3.3 from scratch
 RUN wget http://www.mpich.org/static/downloads/3.3.2/mpich-3.3.2.tar.gz && tar xfz mpich-3.3.2.tar.gz
-RUN cd mpich-3.3.2 && ./configure -prefix=/usr/bin && make && sudo make install
+RUN cd mpich-3.3.2 && ./configure -prefix=/usr/bin && make -j && sudo make install
 
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
