--- a/scripts/docker/dockerfile_fake
+++ b/scripts/docker/dockerfile_fake
@@ -1,3 +1,7 @@
+# This is a fake dockerfile for testing purposes
+# This sufficiently replicates the real Dockerfiles such that
+# it is not necessary to run the full builds to test a CI change
+
 FROM ubuntu:bionic
 RUN apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
 RUN sudo useradd -m -s /bin/bash -G sudo serac
