fix: disable position-independent executables for clang10 on ubuntu18 docker

--- a/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
@@ -2,7 +2,9 @@ compilers:
   - compiler:
       environment: {}
       extra_rpaths: []
-      flags: {}
+      # Axom example sidre_shocktube_F_ex doesn't link otherwise
+      flags:
+        ldflags: -no-pie
       modules: []
       operating_system: ubuntu18.04
       paths:
