fix: attempt to force fpic

--- a/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu18/compilers.yaml
@@ -4,7 +4,7 @@ compilers:
       extra_rpaths: []
       # Axom example sidre_shocktube_F_ex doesn't link otherwise
       flags:
-        ldflags: -no-pie
+        cflags: -fPIC
       modules: []
       operating_system: ubuntu18.04
       paths:
