--- a/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
+++ b/scripts/uberenv/spack_configs/docker/ubuntu16/packages.yaml
@@ -105,3 +105,9 @@ packages:
     externals:
     - spec: cmake@3.10.1
       prefix: /usr
+  llvm:
+    version: [10.0.0]
+    buildable: false
+    externals:
+    - spec: llvm+clang
+      prefix: /usr
