--- a/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
@@ -94,6 +94,12 @@ packages:
     externals:
     - spec: doxygen
       prefix: /usr
+  llvm:
+    version: [10.0.0]
+    buildable: false
+    externals:
+    - spec: llvm+clang
+      prefix: /usr
   python:
     version: [3.6.9]
     buildable: false
