--- a/scripts/uberenv/spack_configs/linux_ubuntu_20/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_20/packages.yaml
@@ -85,6 +85,12 @@ packages:
     externals:
     - spec: doxygen
       prefix: /usr
+  llvm:
+    version: [10.0.0]
+    buildable: false
+    externals:
+    - spec: llvm+clang
+      prefix: /usr
   python:
     version: [3.8.2]
     buildable: false
