Revert ubuntu 18 spack package change

--- a/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
+++ b/scripts/uberenv/spack_configs/linux_ubuntu_18/packages.yaml
@@ -88,6 +88,12 @@ packages:
     externals:
     - spec: cppcheck
       prefix: /usr
+  doxygen:
+    version: [1.8.13]
+    buildable: false
+    externals:
+    - spec: doxygen
+      prefix: /usr
   llvm:
     version: [10.0.0]
     buildable: false
