run help with mpi

--- a/src/drivers/CMakeLists.txt
+++ b/src/drivers/CMakeLists.txt
@@ -17,7 +17,8 @@ if (ENABLE_TESTS)
                  NUM_MPI_TASKS 1 )
 
     blt_add_test(NAME          serac_driver_help
-                 COMMAND       ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/serac --help )
+                 COMMAND       ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/serac --help 
+                 NUM_MPI_TASKS 1 )
 endif()
 
 install( TARGETS serac_driver
