Add mpi run info to example

--- a/examples/host-config.cmake.in
+++ b/examples/host-config.cmake.in
@@ -18,5 +18,9 @@ set(CMAKE_C_FLAGS            "@CMAKE_C_FLAGS@"          CACHE STRING "")
 set(CMAKE_CXX_FLAGS          "@CMAKE_CXX_FLAGS@"        CACHE STRING "")
 set(CMAKE_EXE_LINKER_FLAGS   "@CMAKE_EXE_LINKER_FLAGS@" CACHE STRING "")
 
+# MPI
+set(MPIEXEC_EXECUTABLE "@MPIEXEC_EXECUTABLE@" CACHE PATH "")
+set(MPIEXEC_NUMPROC_FLAG "@MPIEXEC_NUMPROC_FLAG@" CACHE STRING "")
+
 # Path to Serac
 set(SERAC_DIR        "@CMAKE_INSTALL_PREFIX@" CACHE PATH "")
