--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,7 @@ stages:
     - RESOURCES="-t 45 -N 1"
     - echo -e "section_start:$(date +%s):dependencies\r\e[0K
       Build dependencies and generate host-config file (uberenv)"
-    - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_tpls.py -v --spec=${SPEC} --directory=${CI_BUILDS_DIR}/serac_tpls/${CI_RUNNER_ID}
+    - ${EXEC_PREFIX} ${RESOURCES} scripts/llnl/build_tpls.py -v --spec=${SPEC} --directory=${CI_BUILDS_DIR}/serac_tpls/${CI_RUNNER_ID} --mirror=${CI_BUILDS_DIR}/serac_tpls
     - echo -e "section_end:$(date +%s):dependencies\r\e[0K"
     #BUILD + TEST
     - RESOURCES="-t 10 -N 1"
@@ -90,7 +90,7 @@ stages:
     #DEPENDENCIES
     - echo -e "section_start:$(date +%s):dependencies\r\e[0K
       Build dependencies and generate host-config file (uberenv)"
-    - lalloc 1 -W 45 ${LSF_ACCOUNT} scripts/llnl/build_tpls.py -v --spec="${SPEC} ${EXTRA_SPEC}" --directory=${CI_BUILDS_DIR}/serac_tpls/${CI_RUNNER_ID}
+    - lalloc 1 -W 45 ${LSF_ACCOUNT} scripts/llnl/build_tpls.py -v --spec="${SPEC} ${EXTRA_SPEC}" --directory=${CI_BUILDS_DIR}/serac_tpls/${CI_RUNNER_ID} --mirror=${CI_BUILDS_DIR}/serac_tpls
     - echo -e "section_end:$(date +%s):dependencies\r\e[0K"
     #BUILD + TEST
     - echo -e "section_start:$(date +%s):build_and_test\r\e[0K
