cleanup: remove StdFunctionCoef now that it has been merged into MFEM

--- a/src/coefficients/CMakeLists.txt
+++ b/src/coefficients/CMakeLists.txt
@@ -6,13 +6,13 @@
 
 set(coefficients_sources
     loading_functions.cpp
-    stdfunction_coefficient.cpp
+    coefficient_extensions.cpp
     )
 
 set(coefficients_headers
     loading_functions.hpp
     traction_coefficient.hpp
-    stdfunction_coefficient.hpp
+    coefficient_extensions.hpp
     )
 
 blt_add_library(
