breaking the build

--- a/src/physics/operators/CMakeLists.txt
+++ b/src/physics/operators/CMakeLists.txt
@@ -4,28 +4,20 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-set(physics_operators_headers
-    nonlinear_solid_operators.hpp
-    thermal_operators.hpp
-    odes.hpp
-    )
-
-set(physics_operators_sources
-    nonlinear_solid_operators.cpp
-    thermal_operators.cpp
-    )
+set(physics_operators_headers odes.hpp stdfunction_operator.hpp)
 
 set(physics_operators_depends infrastructure physics_utilities numerics fmt mfem mpi axom)
 
-blt_add_library(
-    NAME        physics_operators
-    HEADERS     ${physics_operators_headers}
-    SOURCES     ${physics_operators_sources}
-    DEPENDS_ON  ${physics_operators_depends}
-    )
 
+add_library(physics_operators INTERFACE ${physics_operators_headers})
 
-target_include_directories(physics_operators PUBLIC 
+#blt_add_library(
+#    NAME        physics_operators
+#    HEADERS     ${physics_operators_headers}
+#    DEPENDS_ON  ${physics_operators_depends}
+#    )
+
+target_include_directories(physics_operators INTERFACE 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
         $<INSTALL_INTERFACE:include>
         )
