--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ jobs:
     VM_ImageName: 'ubuntu-16.04'
     Compiler_ImageName: 'seracllnl/tpls:gcc-8_12-01-20_14h-22m'
     TEST_TARGET: 'linux_gcc8'
-    HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0.cmake'
+    HOST_CONFIG: 'docker-linux-ubuntu16.04-x86_64-gcc@8.1.0'
   pool:
       vmImage: $(VM_ImageName)
   steps:
