Move the integrators to the physics folder

--- a/src/physics/CMakeLists.txt
+++ b/src/physics/CMakeLists.txt
@@ -4,6 +4,7 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
+add_subdirectory(integrators)
 add_subdirectory(utilities)
 add_subdirectory(operators)
 
