--- a/src/physics/integrators/CMakeLists.txt
+++ b/src/physics/integrators/CMakeLists.txt
@@ -27,7 +27,7 @@ blt_add_library(
     )
 
 target_include_directories(integrators PUBLIC 
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
     $<INSTALL_INTERFACE:include>
     )
 
