--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -84,8 +84,7 @@ if(NOT SERAC_FOUND)
     # TODO: Construct CMake target from GNU Make-build MFEM
     if(SERAC_MFEM_BUILT_WITH_CMAKE AND NOT MFEM_DIR)
       set(MFEM_DIR ${SERAC_MFEM_DIR})
-      # CMake will have set MFEM_DIR to be the directory containing the CMake config
-      find_dependency(MFEM CONFIG NO_DEFAULT_PATH PATHS "${MFEM_DIR}")
+      find_dependency(MFEM CONFIG NO_DEFAULT_PATH PATHS "${MFEM_DIR}/lib/cmake/mfem")
     endif()
   endif()
 
