--- a/src/serac/coefficients/CMakeLists.txt
+++ b/src/serac/coefficients/CMakeLists.txt
@@ -23,11 +23,11 @@ blt_add_library(
     )
 
 target_include_directories(coefficients PUBLIC 
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
     $<INSTALL_INTERFACE:include>
     )
 
-install(FILES ${coefficients_headers} DESTINATION include/coefficients )
+install(FILES ${coefficients_headers} DESTINATION include/serac/coefficients )
 
 install(TARGETS              coefficients
         EXPORT               serac-targets
