--- a/src/serac/coefficients/CMakeLists.txt
+++ b/src/serac/coefficients/CMakeLists.txt
@@ -16,20 +16,20 @@ set(coefficients_headers
     )
 
 blt_add_library(
-    NAME        coefficients
+    NAME        serac_coefficients
     SOURCES     ${coefficients_sources}
     HEADERS     ${coefficients_headers}
     DEPENDS_ON  axom mfem mpi
     )
 
-target_include_directories(coefficients PUBLIC 
+target_include_directories(serac_coefficients PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../..>
     $<INSTALL_INTERFACE:include>
     )
 
 install(FILES ${coefficients_headers} DESTINATION include/serac/coefficients )
 
-install(TARGETS              coefficients
+install(TARGETS              serac_coefficients
         EXPORT               serac-targets
         DESTINATION          lib
         )
