--- a/src/serac/physics/operators/CMakeLists.txt
+++ b/src/serac/physics/operators/CMakeLists.txt
@@ -4,12 +4,23 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
-set(physics_operators_headers odes.hpp stdfunction_operator.hpp)
-set(physics_operators_sources odes.cpp)
-set(physics_operators_depends infrastructure physics_utilities numerics fmt mfem mpi axom)
+set(physics_operators_headers
+    odes.hpp
+    stdfunction_operator.hpp
+    )
+
+set(physics_operators_sources
+    odes.cpp
+    )
+
+set(physics_operators_depends
+    serac_infrastructure
+    serac_physics_utilities
+    serac_numerics
+    )
 
 blt_add_library(
-   NAME        physics_operators
+   NAME        serac_physics_operators
    HEADERS     ${physics_operators_headers}
    SOURCES     ${physics_operators_sources}
    DEPENDS_ON  ${physics_operators_depends}
@@ -17,7 +28,7 @@ blt_add_library(
 
 install(FILES ${physics_operators_headers} DESTINATION include/serac/physics/operators )
 
-install(TARGETS              physics_operators
+install(TARGETS              serac_physics_operators
         EXPORT               serac-targets
         DESTINATION          lib
         )
