feat: added initial integration of inlet functions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,7 +16,7 @@ if (ENABLE_GTEST)
         NAME        test_utils
         SOURCES     test_utilities.cpp
         HEADERS     test_utilities.hpp
-        DEPENDS_ON  serac_physics
+        DEPENDS_ON  serac_physics gtest serac_infrastructure
         )
 
     set(solver_tests
