--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,9 +20,8 @@ if (ENABLE_GTEST)
         )
 
     set(solver_tests
-        serac_dynamic_solver.cpp
+        serac_nonlinear_solid.cpp
         serac_linelastic_solver.cpp
-        serac_quasistatic_solver.cpp
         serac_thermal_solver.cpp
         serac_thermal_structural_solver.cpp
         serac_dtor.cpp
@@ -45,7 +44,6 @@ if (ENABLE_GTEST)
 
 
     set(coefficent_tests
-        serac_component_bc.cpp
         serac_wrapper_tests.cpp)
 
     foreach(filename ${coefficent_tests})
