fix: re-add component_bc as separate test so it can be run in serial

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,7 @@ if (ENABLE_GTEST)
 
 
     set(coefficent_tests
+        serac_component_bc.cpp
         serac_wrapper_tests.cpp)
 
     foreach(filename ${coefficent_tests})
