Moved the hyperelastic material model into our own class

--- a/src/physics/CMakeLists.txt
+++ b/src/physics/CMakeLists.txt
@@ -7,6 +7,7 @@
 add_subdirectory(integrators)
 add_subdirectory(utilities)
 add_subdirectory(operators)
+add_subdirectory(materials)
 
 set(physics_sources
     base_physics.cpp
@@ -26,7 +27,7 @@ blt_add_library(
     NAME        physics
     SOURCES     ${physics_sources}
     HEADERS     ${physics_headers}
-    DEPENDS_ON  mfem integrators numerics infrastructure physics_utilities physics_operators axom fmt mpi
+    DEPENDS_ON  mfem materials integrators numerics infrastructure physics_utilities physics_operators axom fmt mpi
     )
 
 target_include_directories(physics PUBLIC 
