Move the integrators to the physics folder

--- a/src/serac/physics/CMakeLists.txt
+++ b/src/serac/physics/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 add_subdirectory(utilities)
 add_subdirectory(operators)
+add_subdirectory(integrators)
 add_subdirectory(materials)
 
 set(physics_sources
