--- a/scripts/spack/configs/blueos_3_ppc64le_ib_p9/compilers.yaml
+++ b/scripts/spack/configs/blueos_3_ppc64le_ib_p9/compilers.yaml
@@ -6,44 +6,15 @@ compilers:
         SPACK_TARGET_ARGS: ""
     extra_rpaths: []
     flags:
-      # Required as stdlib (from GCC) does not match compiler
-      cflags: --gcc-toolchain=/usr/tce/packages/gcc/gcc-8.3.1
-      cxxflags: --gcc-toolchain=/usr/tce/packages/gcc/gcc-8.3.1
       # Required as spack cannot recognize compiler-specific linker
       # flags in mixed toolchains
       ldlibs: -lgfortran
     modules: []
     operating_system: rhel7
     paths:
-      cc:  /usr/tce/packages/clang/clang-upstream-2019.08.15/bin/clang
-      cxx: /usr/tce/packages/clang/clang-upstream-2019.08.15/bin/clang++
-      # Required to guarantee consistency with underscored LAPACK
-      # references in MFEM
-      # Also Spack's current mixed toolchain support is insufficient
-      # to trip superlu-dist's conditional removal of underscores
-      f77: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
-      fc: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
-    spec: clang@upstream_gfortran
-    target: ppc64le
-
-# This compiler is only present on rzansel as a proof of concept
-# before it gets rolled out fully
-- compiler:
-    environment:
-      # Temporary workaround: Spack issue #18156
-      set:
-        SPACK_TARGET_ARGS: ""
-    extra_rpaths: []
-    flags:
-      # Required as spack cannot recognize compiler-specific linker
-      # flags in mixed toolchains
-      ldlibs: -lgfortran
-    modules: []
-    operating_system: rhel7
-    paths:
-      cc:  /usr/tce/packages/clang/clang-ibm-2019.10.03-gcc-8.3.1/bin/clang
-      cxx: /usr/tce/packages/clang/clang-ibm-2019.10.03-gcc-8.3.1/bin/clang++
+      cc:  /usr/tce/packages/clang/clang-ibm-10.0.1-gcc-8.3.1/bin/clang
+      cxx: /usr/tce/packages/clang/clang-ibm-10.0.1-gcc-8.3.1/bin/clang++
       f77: /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
       fc:  /usr/tce/packages/gcc/gcc-8.3.1/bin/gfortran
-    spec: clang@ibm_gfortran
+    spec: clang@10.0.1
     target: ppc64le
