--- a/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
+++ b/scripts/spack/configs/blueos_3_ppc64le_ib_p9/packages.yaml
@@ -68,10 +68,8 @@ packages:
     buildable: false
   spectrum-mpi:
     externals:
-      - spec: spectrum-mpi@release%clang@upstream_gfortran
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-upstream-2019.08.15
-      - spec: spectrum-mpi@release%clang@ibm_gfortran
-        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-ibm-2019.10.03-gcc-8.3.1
+      - spec: spectrum-mpi@release%clang@10.0.1
+        prefix: /usr/tce/packages/spectrum-mpi/spectrum-mpi-rolling-release-clang-10.0.1-gcc-8.3.1
 
   # System level packages to not build
   autoconf:
