--- a/scripts/spack/configs/linux_ubuntu_20/packages.yaml
+++ b/scripts/spack/configs/linux_ubuntu_20/packages.yaml
@@ -30,41 +30,41 @@ packages:
   bzip2:
     buildable: false
     externals:
-    - spec: bzip2
+    - spec: bzip2@1.0.8
       prefix: /
   gettext:
     buildable: false
     externals:
-    - spec: gettext
+    - spec: gettext@0.19.8.1
       prefix: /usr
   perl:
     buildable: false
     externals:
-    - spec: perl
+    - spec: perl@5.30.0
       prefix: /usr
   tar:
     buildable: false
     externals:
-    - spec: tar
+    - spec: tar@1.30
       prefix: /
   libx11:
     buildable: false
     externals:
-    - spec: libx11
+    - spec: libx11@6.3.0
       prefix: /usr
   autoconf:
     buildable: false
     externals:
-    - spec: autoconf
+    - spec: autoconf@2.69
       prefix: /usr
   openssl:
     externals:
-    - spec: openssl
+    - spec: openssl@1.1.1
       prefix: /usr/lib/x86_64-linux-gnu/
   openblas:
     buildable: false
     externals:
-    - spec: openblas
+    - spec: openblas@0.3.8
       prefix: /usr/lib/x86_64-linux-gnu/
 
   # Lock in versions of Devtools
@@ -77,29 +77,29 @@ packages:
     version: [1.9]
     buildable: false
     externals:
-    - spec: cppcheck
+    - spec: cppcheck@1.90
       prefix: /usr
   doxygen:
     version: [1.8.17]
     buildable: false
     externals:
-    - spec: doxygen
+    - spec: doxygen@1.8.17
       prefix: /usr
   llvm:
     version: [10.0.0]
     buildable: false
     externals:
-    - spec: llvm+clang
+    - spec: llvm+clang@10.0.0
       prefix: /usr
   python:
     version: [3.8.2]
     buildable: false
     externals:
-    - spec: python
+    - spec: python@3.8.2
       prefix: /usr
   py-sphinx:
     version: [1.8.5]
     buildable: false
     externals:
-    - spec: py-sphinx
+    - spec: py-sphinx@1.8.5
       prefix: /usr
