--- a/.github/workflows/docker_build_tpls.yml
+++ b/.github/workflows/docker_build_tpls.yml
@@ -6,11 +6,13 @@ on:
     # No input required
 
 jobs:
-  clang-10:
+  build_images:
     runs-on: ubuntu-latest
-    name: Builds a Clang 10 docker image and extracts generated hostconfigs
+    name: Builds a docker image and extracts generated hostconfigs
+    strategy:
+      matrix:
+        compiler: [clang-10, gcc-8]
     env:
-      TAG: clang-10
       REPO: seracllnl/tpls
       HOSTCONFIG_LOC: /home/serac/export_hostconfig
       DOCKERFILE_PREFIX: ./scripts/docker/dockerfile_
@@ -21,13 +23,13 @@ jobs:
       id: extract_branch
     - name: Get dockerfile name
       shell: bash
-      run: echo "##[set-output name=filename;]$(echo ${DOCKERFILE_PREFIX}${TAG})"
+      run: echo "##[set-output name=filename;]$(echo ${DOCKERFILE_PREFIX}${{ matrix.compiler }})"
       id: dockerfile_name
     - name: Get dockerhub repo name
       shell: bash
       run: |
-        echo ${REPO}:${TAG}_`date "+%m-%d-%y_%Hh-%Mm"`
-        echo "##[set-output name=repo_plus_tag;]$(echo ${REPO}:${TAG}_`date "+%m-%d-%y_%Hh-%Mm"`)"
+        echo ${REPO}:${{ matrix.compiler }}_`date "+%m-%d-%y_%Hh-%Mm"`
+        echo "##[set-output name=repo_plus_tag;]$(echo ${REPO}:${{ matrix.compiler }}_`date "+%m-%d-%y_%Hh-%Mm"`)"
       id: repo_name
 
     - name: Checkout
@@ -65,67 +67,5 @@ jobs:
     - name: Upload hostconfig
       uses: actions/upload-artifact@v2
       with:
-        name: ${{ env.TAG }}_hostconfigs
-        path: ./extracted_hc/export_hostconfig/*
-
-  gcc-8:
-    runs-on: ubuntu-latest
-    name: Builds a GCC 8 docker image and extracts generated hostconfigs
-    env:
-      TAG: gcc-8
-      REPO: seracllnl/tpls
-      HOSTCONFIG_LOC: /home/serac/export_hostconfig
-      DOCKERFILE_PREFIX: ./scripts/docker/dockerfile_
-    steps:
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: extract_branch
-    - name: Get dockerfile name
-      shell: bash
-      run: echo "##[set-output name=filename;]$(echo ${DOCKERFILE_PREFIX}${TAG})"
-      id: dockerfile_name
-    - name: Get dockerhub repo name
-      shell: bash
-      run: |
-        echo ${REPO}:${TAG}_`date "+%m-%d-%y_%Hh-%Mm"`
-        echo "##[set-output name=repo_plus_tag;]$(echo ${REPO}:${TAG}_`date "+%m-%d-%y_%Hh-%Mm"`)"
-      id: repo_name
-
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${{ steps.repo_name.outputs.repo_plus_tag }}
-        file: ${{ steps.dockerfile_name.outputs.filename }}
-        context: .
-        platforms: linux/amd64
-        build-args: branch=${{ steps.extract_branch.outputs.branch }}
-
-    - name: Get hostconfig
-      run: |
-        echo ${{ steps.docker_build.outputs.digest }}
-        docker pull ${{ steps.repo_name.outputs.repo_plus_tag }}
-        docker create --name extract_hc ${{ steps.repo_name.outputs.repo_plus_tag }}
-        mkdir -p extracted_hc
-        docker cp extract_hc:${{ env.HOSTCONFIG_LOC }} ./extracted_hc
-        docker rm extract_hc
-    
-    - name: Upload hostconfig
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ env.TAG }}_hostconfigs
+        name: ${{ matrix.compiler }}_hostconfigs
         path: ./extracted_hc/export_hostconfig/*
