--- a/scripts/docker/dockerfile_clang-10
+++ b/scripts/docker/dockerfile_clang-10
@@ -16,8 +16,8 @@ USER serac
 RUN git clone --recursive --branch $branch --single-branch --depth 1 https://github.com/LLNL/serac.git
 
 # New containers will use Python3
-RUN python3 ./serac/scripts/uberenv/uberenv.py --spack-config-dir=./serac/scripts/spack/configs/docker/ubuntu18/ --project-json=./serac/.uberenv_config.json \
-                                               --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k
+RUN cd serac && python3 ./scripts/uberenv/uberenv.py --spack-config-dir=./scripts/spack/configs/docker/ubuntu18/ --project-json=.uberenv_config.json \
+                                                     --spec=%clang@10.0.0 --prefix=/home/serac/serac_tpls -k
 
 # Make sure the new hostconfig worked
 RUN cd serac && python3 config-build.py -hc *.cmake -bp build && cd build && make -j && make -j test
