--- a/.github/workflows/docker_build_tpls.yml
+++ b/.github/workflows/docker_build_tpls.yml
@@ -37,6 +37,8 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+      with:
+        driver-opts: env.BUILDKIT_STEP_LOG_MAX_SIZE=-1, env.BUILDKIT_STEP_LOG_MAX_SPEED=-1
 
     - name: Login to DockerHub
       uses: docker/login-action@v1 
