Work on the geometric stiffness component of the gradient

--- a/src/serac/physics/integrators/CMakeLists.txt
+++ b/src/serac/physics/integrators/CMakeLists.txt
@@ -16,7 +16,10 @@ set(integrators_headers
     wrapper_integrator.hpp
     )
 
-set(integrators_depends serac_infrastructure)
+set(integrators_depends
+    serac_infrastructure
+    serac_materials
+    )
 
 blt_add_library(
     NAME        serac_integrators
