--- a/scripts/docker/dockerfile.in
+++ b/scripts/docker/dockerfile.in
@@ -8,6 +8,10 @@ RUN sudo apt-get install curl ssh pkg-config build-essential libopenblas-dev mpi
 RUN sudo apt-get -qq install -y --no-install-recommends gfortran-7 && sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 100
 RUN sudo ln -f -s python3 /usr/bin/python # Compatibility with legacy Python
 
+# Avoid building CMake from scratch
+RUN wget https://cmake.org/files/v3.18/cmake-3.18.5-Linux-x86_64.sh
+RUN sudo sh cmake-3.18.5-Linux-x86_64.sh --prefix=/usr --exclude-subdir
+
 RUN sudo useradd -m -s /bin/bash -G sudo serac
 
 WORKDIR "/home/serac"
